# cl_ops

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  Makefile.old  README.md  VERSION
docs/: userguide.md
scripts/: CMakeLists.txt  clo_rng_plot.py  rng_plot.m  rng_plot.py
src/: CMakeLists.txt  Makefile  Makefile.old  cl_ops.h
src/benchmarks/: CMakeLists.txt  clo_bench.c  clo_bench.h  clo_rng_bench.c  clo_rng_bench.cl  clo_rng_bench.in.h  clo_scan_bench.c  clo_scan_bench.h  clo_sort_bench.c  clo_sort_bench.h
src/cl_ops/: CMakeLists.txt  cl_ops.h
src/cl_ops/common/: CMakeLists.txt  clo_common.c  clo_common.h  clo_common.in.h
src/cl_ops/rng/: CMakeLists.txt  clo_rng.c  clo_rng.cl  clo_rng.h  clo_rng.in.h  clo_rng_api.cl  clo_rng_init.cl  clo_rng_lcg.cl  clo_rng_mwc64x.cl  clo_rng_old.c  clo_rng_old.h  clo_rng_parkmiller.cl  clo_rng_tauslcg.cl  clo_rng_workitem.cl  clo_rng_xorshift128.cl  clo_rng_xorshift64.cl
src/cl_ops/scan/: CMakeLists.txt  clo_scan.c  clo_scan.cl  clo_scan.h  clo_scan_abstract.c  clo_scan_abstract.h  clo_scan_abstract.in.h  clo_scan_blelloch.c  clo_scan_blelloch.cl  clo_scan_blelloch.h  clo_scan_blelloch.in.h
src/cl_ops/sort/: CMakeLists.txt  clo_sort.c  clo_sort.h  clo_sort_abitonic.c  clo_sort_abitonic.cl  clo_sort_abitonic.in.h  clo_sort_abstract.c  clo_sort_abstract.in.h  clo_sort_gselect.c  clo_sort_gselect.cl  clo_sort_gselect.h  clo_sort_gselect.in.h  clo_sort_satradix.c  clo_sort_satradix.cl  clo_sort_satradix.in.h  clo_sort_sbitonic.c  clo_sort_sbitonic.cl  clo_sort_sbitonic.in.h
src/cl_ops/sort_old/: CMakeLists.txt  clo_sort.c  clo_sort.cl  clo_sort.h  clo_sort_abitonic.c  clo_sort_abitonic.cl  clo_sort_abitonic.h  clo_sort_gselect.c  clo_sort_gselect.cl  clo_sort_gselect.h  clo_sort_satradix.c  clo_sort_satradix.cl  clo_sort_satradix.h  clo_sort_sbitonic.c  clo_sort_sbitonic.cl  clo_sort_sbitonic.h  clo_sort_test.c  clo_sort_test.h
src/common/: CMakeLists.txt  Makefile  Makefile.old  clo_common.c  clo_common.h
src/rng/: CMakeLists.txt  Makefile  Makefile.old  clo_rng.c  clo_rng.cl  clo_rng.h  clo_rng_lcg.cl  clo_rng_mwc64x.cl  clo_rng_test.c  clo_rng_test.cl  clo_rng_test.h  clo_rng_xorshift128.cl  clo_rng_xorshift64.cl  clo_workitem.cl
src/scan/: CMakeLists.txt  clo_scan.c  clo_scan.cl  clo_scan.h  clo_scan_abstract.c  clo_scan_abstract.h  clo_scan_blelloch.c  clo_scan_blelloch.h  clo_scan_test.c  clo_scan_test.h
src/sort/: CMakeLists.txt  Makefile  Makefile.old  clo_sort.c  clo_sort.cl  clo_sort.h  clo_sort_abitonic.c  clo_sort_abitonic.cl  clo_sort_abitonic.h  clo_sort_gselect.c  clo_sort_gselect.cl  clo_sort_gselect.h  clo_sort_satradix.c  clo_sort_satradix.cl  clo_sort_satradix.h  clo_sort_sbitonic.c  clo_sort_sbitonic.cl  clo_sort_sbitonic.h  clo_sort_test.c  clo_sort_test.h
src/tests/: CMakeLists.txt  clo_rng_test.c  clo_rng_test.cl  clo_rng_test.h  clo_rng_test.in.h  clo_rng_test_old.c  clo_rng_test_old.h  clo_scan_test.c  clo_scan_test.h  clo_scan_test_old.c  clo_scan_test_old.h  clo_sort_test.c  clo_sort_test.h  clo_test.c  clo_test.h  test_rng.c
