# Add RNG source to aggregated library sources list
set(CLO_LIB_SRCS_CURRENT clo_rng.c PARENT_SCOPE)

file(READ ${CMAKE_CURRENT_SOURCE_DIR}/clo_rng_workitem.cl RNG_SRC_WORKITEM_RAW HEX)
string(REGEX REPLACE "(..)" "\\\\x\\1" RNG_SRC_WORKITEM ${RNG_SRC_WORKITEM_RAW})

file(READ ${CMAKE_CURRENT_SOURCE_DIR}/clo_rng_lcg.cl RNG_SRC_LCG_RAW HEX)
string(REGEX REPLACE "(..)" "\\\\x\\1" RNG_SRC_LCG ${RNG_SRC_LCG_RAW})

file(READ ${CMAKE_CURRENT_SOURCE_DIR}/clo_rng_xorshift64.cl RNG_SRC_XORSHIFT64_RAW HEX)
string(REGEX REPLACE "(..)" "\\\\x\\1" RNG_SRC_XORSHIFT64 ${RNG_SRC_XORSHIFT64_RAW})

file(READ ${CMAKE_CURRENT_SOURCE_DIR}/clo_rng_xorshift128.cl RNG_SRC_XORSHIFT128_RAW HEX)
string(REGEX REPLACE "(..)" "\\\\x\\1" RNG_SRC_XORSHIFT128 ${RNG_SRC_XORSHIFT128_RAW})

file(READ ${CMAKE_CURRENT_SOURCE_DIR}/clo_rng_mwc64x.cl RNG_SRC_MWC64X_RAW HEX)
string(REGEX REPLACE "(..)" "\\\\x\\1" RNG_SRC_MWC64X ${RNG_SRC_MWC64X_RAW})

file(READ ${CMAKE_CURRENT_SOURCE_DIR}/clo_rng.cl RNG_SRC_RAW HEX)
string(REGEX REPLACE "(..)" "\\\\x\\1" RNG_SRC ${RNG_SRC_RAW})

file(READ ${CMAKE_CURRENT_SOURCE_DIR}/clo_rng_init.cl RNG_SRC_INIT_RAW HEX)
string(REGEX REPLACE "(..)" "\\\\x\\1" RNG_SRC_INIT ${RNG_SRC_INIT_RAW})

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/clo_rng.in.h
	${CMAKE_BINARY_DIR}/${PROJECT_NAME}/clo_rng.h @ONLY)

# Install the configured header
install(FILES ${CMAKE_BINARY_DIR}/${PROJECT_NAME}/clo_rng.h
	DESTINATION ${INSTALL_SUBDIR_INCLUDE}/${PROJECT_NAME})
